--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,13 +16,15 @@ reqwest = { version = "0.11", features = ["json", "blocking"] }
 tokio = { version = "1.32", features = ["full"] }
 anyhow = "1.0"
 dirs = "5.0"
-git2 = "0.18"
+
 thiserror = "1.0"
 config = "0.13"
 once_cell = "1.18"
 glob = "0.3"
 async-trait = "0.1"
 indicatif = "0.17"
+regex = "1.11.1"
+tempfile = "3.8"
 
 [dev-dependencies]
 tempfile = "3.8"
