feat: exclude Cargo.lock from .fuckmit.yml
Exclude the Cargo.lock file from the .fuckmit.yml configuration to prevent it from being included in the commit message generation process.

--- a/.fuckmit.yml
+++ b/.fuckmit.yml
@@ -7,4 +7,5 @@ prompt:
     Generate a concise git commit message for the following changes:
 
     {{diff}}
-exclude: []
+exclude:
+  - "Cargo.lock"
