--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,21 +51,25 @@ jobs:
       - name: Install cross-compilation tools
         if: matrix.target == 'aarch64-unknown-linux-gnu'
         run: |
+          sudo dpkg --add-architecture arm64
           sudo apt-get update
-          sudo apt-get install -y gcc-aarch64-linux-gnu libssl-dev pkg-config
+          sudo apt-get install -y gcc-aarch64-linux-gnu
           sudo apt-get install -y --no-install-recommends g++-aarch64-linux-gnu libc6-dev-arm64-cross
-          sudo apt-get install -y libssl-dev:arm64
-          echo "PKG_CONFIG_PATH=/usr/lib/aarch64-linux-gnu/pkgconfig" >> $GITHUB_ENV
-          echo "OPENSSL_DIR=/usr/include/aarch64-linux-gnu" >> $GITHUB_ENV
-          echo "OPENSSL_LIB_DIR=/usr/lib/aarch64-linux-gnu" >> $GITHUB_ENV
-          echo "OPENSSL_INCLUDE_DIR=/usr/include/aarch64-linux-gnu" >> $GITHUB_ENV
+          sudo apt-get install -y pkg-config libssl-dev
+          
+          # Use cross instead of direct cross-compilation
+          cargo install cross --git https://github.com/cross-rs/cross
 
       - name: Build binary
+        if: matrix.target != 'aarch64-unknown-linux-gnu'
         uses: actions-rs/cargo@v1
         with:
           command: build
           args: --release --target ${{ matrix.target }}
-          use-cross: ${{ matrix.os == 'ubuntu-latest' && matrix.target == 'aarch64-unknown-linux-gnu' }}
+
+      - name: Build binary (ARM64 Linux)
+        if: matrix.target == 'aarch64-unknown-linux-gnu'
+        run: cross build --release --target ${{ matrix.target }}
 
       - name: Prepare binary
         shell: bash
