--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ clap_complete = "4.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 serde_json = "1.0"
-reqwest = { version = "0.11", features = ["json", "blocking"] }
+reqwest = { version = "0.11", features = ["json", "blocking", "native-tls-vendored"] }
 tokio = { version = "1.32", features = ["full"] }
 anyhow = "1.0"
 dirs = "5.0"
