--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ clap_complete = "4.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 serde_json = "1.0"
+toml = "0.8"
 reqwest = { version = "0.11", features = ["json", "blocking", "native-tls-vendored"] }
 tokio = { version = "1.32", features = ["full"] }
 anyhow = "1.0"
