--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fuckmit"
-version = "0.2.1"
+version = "0.3.0-alpha.1"
 edition = "2021"
 description = "AI-powered git commit message generator"
 authors = ["mingeme00@outlook.com"]
