--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "fuckmit"
-version = "0.3.0-alpha.1"
+version = "0.3.0-alpha.2"
 edition = "2021"
 description = "AI-powered git commit message generator"
-authors = ["mingeme00@outlook.com"]
+authors = ["heminghu00@outlook.com"]
 keywords = ["git", "commit", "ai", "cli"]
 categories = ["command-line-utilities"]
 repository = "https://github.com/mingeme/fuckmit"
@@ -17,20 +17,14 @@ clap_complete = "4.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 serde_json = "1.0"
-toml = "0.8"
-reqwest = { version = "0.11", features = ["json", "blocking", "native-tls-vendored"] }
+toml = "0.9"
+reqwest = { version = "0.12", features = ["json", "blocking", "native-tls-vendored"] }
 tokio = { version = "1.32", features = ["full"] }
 anyhow = "1.0"
-dirs = "5.0"
 
-thiserror = "1.0"
-config = "0.13"
-once_cell = "1.18"
-glob = "0.3"
-async-trait = "0.1"
-indicatif = "0.17"
-regex = "1.11.1"
-tempfile = "3.8"
+thiserror = "2.0"
+config = "0.15"
+async-trait = "0.1.82"
 
 [profile.release]
 strip = true
